--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/t98/projects/demo",
-      "program": "/home/t98/projects/demo/build/Debug/outDebug",
+      "cwd": "/home/t98/projects/-0",
+      "program": "/home/t98/projects/-0/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
